--- a/src/layout.html
+++ b/src/layout.html
@@ -17,7 +17,7 @@
 <div id="container" class="has-fixed-nav"></div>
 
 
-<div id="alert" class="modal">
+<div id="modal" class="modal">
     <div class="modal-background"></div>
     <div class="modal-card">
         <header class="modal-card-head"></header>
