Fix removing tabs, navbar

--- a/src/layout.html
+++ b/src/layout.html
@@ -1,10 +1,10 @@
 <header class="header is-fixed-top">
-    <nav class="nav-inverse nav has-shadow">
-        <div class="nav-left">
-            <div class="nav-item nav-slider-toggle">
+    <nav class="navbar is-primary" role="navigation" aria-label="main navigation">
+        <div class="navbar-brand">
+            <div class="navbar-item nav-slider-toggle">
                 <img src="https://gitcdn.xyz/cdn/Blockheads-Messagebot/UI/master/logo.png">
             </div>
-            <a class="nav-item is-tab nav-slider-toggle">Menu</a>
+            <a class="navbar-item nav-slider-toggle">Menu</a>
         </div>
     </nav>
 </header>
