Point runtime deps to github pages, upgrade deps

--- a/src/layout.html
+++ b/src/layout.html
@@ -2,7 +2,7 @@
     <nav class="navbar is-primary" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
             <div class="navbar-item nav-slider-toggle">
-                <img src="https://gitcdn.xyz/cdn/Blockheads-Messagebot/UI/master/logo.png">
+                <img src="https://blockheads-messagebot.github.io/UI/logo.png">
             </div>
             <a class="navbar-item nav-slider-toggle">Menu</a>
         </div>
